# HttpServer

./: .gitignore  CMakeLists.txt  HttpServer.puml  ParsingStateMachine.puml  README.md  main.cpp
include/: Connection.hpp  Portability.hpp  Server.hpp  Tools.hpp
include/HttpMessage/: Body.hpp  HeaderFieldName.hpp  Message.hpp  Request.hpp  RequestLine.hpp  Response.hpp  ResponseLine.hpp  Version.hpp
public/: index.html
tests/: CMakeLists.txt  RequestTests.cpp  ToolsTests.cpp
